<!--
  Mirakel is an Android App for Managing your ToDo-Lists
  
  Copyright (c) 2013-2014 Anatolij Zelenin, Georg Semmler.
  
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
    Move
    Share
    Sync
    Delete
    Config
    Credits
    Bugreport
    -->
    <item
        android:id="@+id/menu_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_delete_task"
        android:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_move"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/menu_move_task"
        android:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_undo"
        android:title="@string/action_undo"
        android:showAsAction="never"/>
    <item
        android:id="@+id/share_task"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share_task"
        android:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/mark_as_subtask"
        android:icon="@android:drawable/ic_menu_directions"
        android:title="@string/as_subtask"
        android:showAsAction="never"/>
    <item
        android:id="@+id/menu_task_clone"
        android:title="@string/task_clone"
        android:showAsAction="never"/>
    <item
        android:id="@+id/menu_sync_now"
        android:title="@string/action_sync_now"
        android:showAsAction="never"/>
    <item
        android:id="@+id/menu_contact"
        android:title="@string/action_contact"
        android:showAsAction="never"/>
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:showAsAction="never"/>
    <item
        android:id="@+id/menu_survey"
        android:title="@string/mirakel_survey"
        android:showAsAction="never"/>

</menu>