<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Mirakel is an Android App for managing your ToDo-Lists
  ~
  ~   Copyright (c) 2013-2015 Anatolij Zelenin, Georg Semmler.
  ~
  ~       This program is free software: you can redistribute it and/or modify
  ~       it under the terms of the GNU General Public License as published by
  ~       the Free Software Foundation, either version 3 of the License, or
  ~       any later version.
  ~
  ~       This program is distributed in the hope that it will be useful,
  ~       but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~       MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~       GNU General Public License for more details.
  ~
  ~       You should have received a copy of the GNU General Public License
  ~       along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="missingTitle" >
        <item
        android:id="@+id/menu_delete"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_delete_task"/>
    <item
        android:id="@+id/menu_move"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/menu_move_task"/>
    <item
        android:id="@+id/menu_set_due"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/menu_set_due"/>
    <item
        android:id="@+id/edit_task"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_edit_task"/>
    <item
        android:id="@+id/done_task"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_checkmark_holo_light"
        android:title="@string/menu_do_task"/>

</menu>