<?xml version="1.0" encoding="utf-8"?>
<!--
  Mirakel is an Android App for Managing your ToDo-Lists
  
  Copyright (c) 2013-2014 Anatolij Zelenin, Georg Semmler.
  
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/box_tasks_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingEnd="0dp"
    android:paddingStart="0dp"
    android:paddingTop="0dp"
    tools:context=".TasksActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnAudio_tasks"
            style="@style/imgButton"
            android:layout_width="@dimen/head_line_size"
            android:layout_height="@dimen/head_line_size"
            android:contentDescription="@string/speak"
            android:src="@drawable/recording" />

        <ImageButton
            android:id="@+id/btnSpeak_tasks"
            style="@style/imgButton"
            android:layout_width="@dimen/head_line_size"
            android:layout_height="@dimen/head_line_size"
            android:contentDescription="@string/speak"
            android:src="@android:drawable/ic_btn_speak_now" />

        <ImageButton
            android:id="@+id/btnCamera"
            style="@style/imgButton"
            android:layout_width="@dimen/head_line_size"
            android:layout_height="@dimen/head_line_size"
            android:contentDescription="@string/takePhoto"
            android:src="@android:drawable/ic_menu_camera" />

        <EditText
            android:id="@+id/tasks_new"
            android:layout_width="0dp"
            android:layout_height="@dimen/head_line_size"
            android:layout_weight="1"
            android:hint="@string/tasks_new_str"
            android:imeOptions="actionSend"
            android:singleLine="true"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btnEnter"
            style="@style/imgButton"
            android:layout_width="@dimen/head_line_size"
            android:layout_height="@dimen/head_line_size"
            android:contentDescription="@android:string/ok"
            android:src="@android:drawable/ic_menu_send"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/marginTopDivider"
        android:background="?android:attr/listDivider" />

    <ListView
        android:id="@+id/tasks_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:descendantFocusability="beforeDescendants" >
    </ListView>

</LinearLayout>